# mesh-infrastructure

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  actors-manifest.json  rustfmt.toml
.github/workflows/: rustdoc.yml
actors/actor-vdr-agent/: Cargo.toml
actors/actor-vdr-agent/src/: create_did_handler.rs  data.rs  fetch_did_document_handler.rs  lib.rs  link_vdr_handler.rs  sign_presentation_handler.rs
app-create-build-data/: Cargo.toml
app-create-build-data/src/: main.rs
c-libraries/hushmesh-crypto/: hm_crypt.c  hm_crypt.h  hm_log.c  hm_log.h  hm_sync.c  hm_sync.h  hm_tls.c  hm_tls.h  hm_tls_internal.h  sign_tool_simulator.c
c-libraries/hushmesh-crypto/hushmesh-crypto-app/: Makefile
c-libraries/wolfssl/: Makefile
c-libraries/wolfssl/enclave_support/: CMakeLists.txt  build.sh  sgx_oqs.patch  sgx_sdk_mutex_and_gettime.patch  sgx_t_static.mk  user_settings.h
crates/crate-app-build-data/: Cargo.toml
crates/crate-app-build-data/src/: lib.rs
crates/crate-common-agent/: Cargo.toml
crates/crate-common-agent/src/: agent.rs  agent_bootstrap.rs  agent_to_agent.rs  authorization.rs  authorization_handlers.rs  lemid_links.rs  lib.rs
crates/crate-common-async/: Cargo.toml  build.rs
crates/crate-common-async/c/: async_local_context.c
crates/crate-common-async/src/: expect_ready.rs  lib.rs  once_value.rs  oneshot.rs
crates/crate-common-build-injection/: Cargo.toml
crates/crate-common-build-injection/src/: lib.rs  predefined_ids.rs
crates/crate-common-crypto/: Cargo.toml  build.rs
crates/crate-common-crypto/src/: bbs_crypto.rs  lib.rs  rng.rs
crates/crate-common-enclave-processor/: Cargo.toml
crates/crate-common-enclave-processor/src/: lib.rs
crates/crate-common-messages/: Cargo.toml
crates/crate-common-messages-verifiable-credentials/: Cargo.toml
crates/crate-common-messages-verifiable-credentials/src/: holder_agent_messages.rs  hsm_agent_messages.rs  lib.rs  vdr_agent_messages.rs
crates/crate-common-messages-web/: Cargo.toml  build.rs
crates/crate-common-messages-web/src/: https_client_messages.rs  https_listener_messages.rs  lib.rs  websocket_listener_messages.rs
crates/crate-common-messages/src/: agent_messages.rs  agent_trustee_messages.rs  certificate_agent_messages.rs  enclave.rs  entity_trustee_messages.rs  lib.rs  maintenance_messages.rs  message_types.rs  metrics_messages.rs  wrapped_message.rs
crates/crate-common-sessions/: Cargo.toml
crates/crate-common-sessions/src/: lib.rs  request_table.rs  response_table.rs  routing_table.rs  session_table.rs
crates/crate-common-sync/: Cargo.toml
crates/crate-common-sync/src/: lib.rs
crates/crate-common-types/: Cargo.toml
crates/crate-common-types/src/: actors_manifest.rs  agent_entity_trustee_objects.rs  cbor.rs  convert_macros.rs  file_directories.rs  from_c.rs  image_data_objects.rs  lib.rs  macros.rs  mesh_id.rs  node_name.rs  permissions.rs  relationships.rs  status_message_strings.rs  time.rs  uns_data_objects.rs  validation.rs  verifiable_credentials_data_objects.rs  versioning.rs
crates/crate-common-verifiable-credentials/: Cargo.toml
crates/crate-common-verifiable-credentials/src/: bbs.rs  canonicalize.rs  check.rs  hash.rs  jff.rs  json_pointer.rs  lib.rs  ns.rs  permanent_resident.rs  select.rs  serialize.rs  skolemize.rs  verify.rs
