[package]
name = "mesh-create-build-data"
version = "0.1.0"
edition = "2021"

[features]
default = []
production = ["log/max_level_info"]

[dependencies]
common-build-injection = { path = "../crates/crate-common-build-injection" }
common-crypto = { path = "../crates/crate-common-crypto" }
common-types = { path = "../crates/crate-common-types" }
app-build-data = { path = "../crates/crate-app-build-data" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
webpki-root-certs = "0.26.4"
