[package]
name = "app-build-data"
version = "0.1.0"
edition = "2021"

[dependencies]
common-types = { path = "../crate-common-types" }
common-build-injection = { path = "../crate-common-build-injection" }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
