[package]
name = "common-async"
version = "0.1.0"
edition = "2021"

[features]
default = []
enclave = []

[dependencies]
cfg-if = { workspace = true }
common-messages = { path = "../../crates/crate-common-messages" }
common-sync = { path = "../../crates/crate-common-sync" }
common-types = { path = "../../crates/crate-common-types" }
hashbrown = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }

[build-dependencies]
cc = "1.0"
