[package]
name = "common-build-injection"
version = "0.1.0"
edition = "2021"

[features]
default = []
enclave = []

[dependencies]
cfg-if = { workspace = true }
common-crypto = { path = "../crate-common-crypto" }
common-types = { path = "../crate-common-types" }
hashbrown = { workspace = true }
log = { workspace = true }
num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
